# tag-gallery

./: .env  .gitignore  Cargo.toml  LICENSE  README  settings.toml  tag_gallery.sql
src/: auth.rs  crawler.rs  db.rs  error.rs  healthcheck.rs  image.rs  image_processor.rs  image_processor_api  image_processor_pool.rs  main.rs  pool_async.rs
src/docs/: endpoints  modes
src/endpoints/: auth.rs  crawler.rs  healthcheck.rs  image.rs  mod.rs  processor.rs  tester.rs
src/endpoints/crawler/: helpers.rs
src/error/: conversion.rs
static/: rapidoc.html
