[package]
name = "gallery"
version = "0.1.0"
authors = ["Victor Semenov <suit.uanic@gmail.com>"]

[dependencies]
iron = "0.6"
params = "0.8"
router = "0.6"
staticfile = "0.4"
mount = "0.4.0"
log = "*"
env_logger = "*"
mysql = "*"
iron-params = "0.1.3"
serde_json = "1.0"
serde = "1.0.8"
serde_derive = "1.0.24"
walkdir = "2.0.1"
rayon = "0.9"
image = "*"
config = "*"
persistent = "*"
kamadak-exif = "0.3.0"

[dependencies.logger]
git = "https://github.com/iron/logger.git"