[package]
name = "gallery"
version = "0.1.0"
authors = ["Victor Semenov <suit.uanic@gmail.com>"]
edition = "2021"

[dependencies]
walkdir = "2.0.1"
rayon = "1.7"
kamadak-exif = "0.5"
#============================================================================================================================
chrono = {version = "0.4.23", features=["serde"]}
chrono-tz = "0.8.1"
futures-util = "0.3.26"
hmac = { version = "0.12", features = ["reset"] }
image = "0.24.5"
indexmap = "1.8.2"
lambda-web = { version = "0.2.0", features = ["rocket05"] } # Integration with AWS lambda

openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"

rocket = { version = "=0.5.0-rc.2", default-features = false, features = ["json"] } # Web framework
rocket_async_compression = "0.2.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "c17e8145baa4790319fdb6a473e465b960f55e7c" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["rapidoc", "rocket_db_pools"] } # OpenAPI generation for Rocket
schemars = {version = "0.8.10", features = ["chrono"]}
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
url = { version = "2", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = ["macros", "offline", "migrate", "decimal", "chrono"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_mysql"]